@startuml
entity user{
  *id : int
  --
  first_name :   varchar(100)
  last_name :    varchar(100)
  date_of_birth: date
}
entity group{
  *id : int
  --
  code : varchar(100) [UNIQUE]
  name : varchar(100)
}
entity user_group{
  *id :      int
  --
  user_id :  int [FK]
  group_id : int [FK]
}
user "1" --> "*" user_group 
group "1" --> "0..N" user_group
@enduml